fix font size on mobile

--- a/css/meets.css
+++ b/css/meets.css
@@ -40,3 +40,9 @@ a {
     color: black;
     text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+    #meet-table {
+        font-size: xx-small;
+    }
+}
